--- a/src/Views/Admin/Views/Orders/Views/History/History.module.css
+++ b/src/Views/Admin/Views/Orders/Views/History/History.module.css
@@ -12,6 +12,13 @@
     gap:1rem;
 }
 
+.spinerContainer{
+  display: flex;
+  justify-content: center;
+  width: 100% !important;
+
+}
+
 .messageSection{
   display: flex;
   width: 100%;
