--- a/src/Views/ProductDetails/ProductDetails.module.css
+++ b/src/Views/ProductDetails/ProductDetails.module.css
@@ -77,3 +77,7 @@
   .containerReviews{
     position: relative;
   }
+
+  .blurBackground {
+    filter: blur(5px); /* Ajusta el valor de desenfoque según tus preferencias */
+  }
