--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,8 +1,6 @@
-/* .carousel {
-    width: 1349px;
-} */
+
 
 .carousel img {
-    /* height: 400px; */
     width: 100%;
+    max-height: 500px;
 }
