--- a/src/components/FormRating/FormRating.module.css
+++ b/src/components/FormRating/FormRating.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 40vw !important;
+    width: 600px !important;
     height: 280px !important;
     border-radius: 20px;
     position: absolute;
@@ -41,11 +41,11 @@
 
 /* efectos de animacion */
 .fadeIn {
-    animation: fadeIn 0.8s ease-in-out forwards;
+    animation: fadeIn 0.7s ease-in-out forwards;
 }
   
 .fadeOut {
-animation: fadeOut 0.8s ease-in-out forwards;
+animation: fadeOut 0.1s ease-in-out forwards;
 }
   
 @keyframes fadeIn {
