--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -1,9 +1,8 @@
 .textura {
     background-image: url('../../Images/TEXTURA_WEB.jpg')  ;
     background-size: cover;
-    margin-top: 80px;
-    margin-bottom: 30px;  
     height: fit-content;
+    padding: 5rem 3rem !important;
 }
 
 
@@ -12,9 +11,16 @@
     height: 100%;
     object-fit: cover;
     transform: scale(1);
-    filter: brightness(0.8); /* Aplica un filtro de brillo del 50% y desenfoque de 4px por defecto */
+    filter: brightness(0.9); /* Aplica un filtro de brillo del 50% y desenfoque de 4px por defecto */
     transition: transform 0.1s, filter 0.3s ease; /* Transiciones suaves para transform y filtro */
+    border: none;
 }
+
+.responsiveCard {
+    overflow: hidden !important;
+    filter: none !important; 
+}
+
 .responsiveCard img:hover {
     transform: scale(1.05);
     object-fit: cover;    
@@ -25,29 +31,28 @@
     background-color: #FC6522 ; 
     text-align: center; 
     padding: 10px;
+    border: none;
+    overflow: hidden !important;
 }
 
 .cardTitle {
     color:#ffffff;
-    font-size: 20px;
+    font-size:19px;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
 }
 
 
 .btnCategory {
-    color: #FC6522;
-    font-weight: bold;
-    width: 200px;
-    height: 50px; 
-    margin-bottom: 25px;
-    margin-top: 30px;
-    margin-left: 20px; 
-    font-size: 25px;
+    display: inline-block;
+    color: #FC6522 !important;
+    font-weight: 700 !important;
+    margin-bottom: 30px !important;
+    font-size: 25px !important;
     border-radius: 57px;
     border: none;
-    padding-bottom: 6px;
-    
+    padding: 0.5rem 1.0rem !important;
+    background-color: #ffffff;
 }
 
 .btnCategory:hover{
