desing customer table

--- a/src/Views/Admin/Components/PaginationAdminOrders/PaginationAdminOrders.module.css
+++ b/src/Views/Admin/Components/PaginationAdminOrders/PaginationAdminOrders.module.css
@@ -3,7 +3,7 @@
     border: none;
 }
 
-a:focus{
+.paginationContianer a:focus{
     box-shadow: none !important;
     background-color: white !important;
 }
