--- a/src/Views/Admin/Views/Users/Views/ManageUsers/ManageUsers.module.css
+++ b/src/Views/Admin/Views/Users/Views/ManageUsers/ManageUsers.module.css
@@ -13,9 +13,55 @@
 }
 
 table.table {
-  width: 100%;
+ width: 100%;
   border-collapse: collapse;
 
+}
+
+.editProductContainer{
+  background-color: #dbdbdb;
+  margin-bottom: 0;
+  padding: 2rem !important;
+  border-radius: 4px;
+  border: 1px solid #c5c5c5;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+ align-items: center;
+
+  gap:1rem;
+}
+
+.resetButton{
+ height:2.5rem;
+  border-radius: 4px;
+  margin-right: 5px;
+  padding: 5px 16px;
+  background-color: #383838;
+  outline: none;
+  color: white;
+  border: none;
+  font-weight: 600;
+}
+
+.toogleButton{
+  height:2.5rem;
+  border-radius: 4px;
+  padding: 5px 16px;
+  background-color: #ffffff;
+  border: 2px solid #383838;
+  outline: none;
+  color: #383838;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.toogleButton span i{
+ font-size: 1.5rem;
+  color: #383838;
+  margin: 0 !important;
 }
 
 .table th, .table td {
@@ -26,8 +72,8 @@ table.table {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
- min-width: 80px;
-  max-width: 130px;
+  width: auto; /* Ajusta el ancho al contenido */
+  min-width: 60px;
 text-align: center;
 
 background-color: white;
@@ -193,3 +239,185 @@ button.editButton:hover  i{
     color: #383838;
   }
 
+  .spinerContainer{
+    display: flex;
+    justify-content: center;
+    width: 100% !important;
+  
+  }
+
+  .messageSection{
+    display: flex;
+    width: 100%;
+    justify-content:flex-start;
+    height: 2.5rem;
+    margin-bottom: 10px;
+  }
+
+
+  button.editButton {
+    height:100%;
+    border-radius: 4px;
+    margin-left: 2px;
+    padding: 5px 16px;
+    background-color: #383838;
+    outline: none;
+    color: white;
+    border: none;
+    font-weight: 600;
+    border: 2px solid #383838;
+  }
+  
+  button.editButton:hover {
+   
+    background-color: #fdf747;
+    color: #383838;
+  
+  }
+  
+  button.editButton:active{
+   
+    background-color: #c4bf3f;
+  
+  }
+  
+  .editButton i{
+    color: #fdf747;
+  }
+  
+  button.editButton:hover  i{
+    color: #383838;
+  }
+  
+  
+  .saveButton, .cancelButton, .saveButtonOff, .deletetButton, .deletetButtonOff{
+    border-radius: 4px;
+    margin-left: 2px;
+    padding: 2px 8px;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    background-color: #383838;
+  }
+  
+  
+  .saveButton{
+    color: #58ff3b;
+    background-color: #383838;
+    border: 2px solid #383838;
+  }
+  
+  .saveButtonOff{
+    color: #ffffff;
+    background-color: #808080;
+    border: 2px solid #555555;
+   cursor:default !important;
+  }
+  
+  .deletetButtonOff{
+    color: #ffffff;
+    background-color: #808080;
+    border: 2px solid #555555;
+   cursor:default !important;
+  }
+  
+  .saveButton:hover{
+   color: #383838;
+    background-color: #58ff3b;
+    }
+  
+    .cancelButton{
+    background-color: #383838;
+    border: 2px solid #383838;
+    }
+  
+    .deletetButton{
+      color: #ff4848;
+    background-color: #383838;
+    border: 2px solid #383838;
+    }
+  
+    .cancelButton:hover{
+    background-color: #c9c9c9;
+    }
+  
+    .cancelButton i{
+      color: #ffffff;
+      font-size: 1.2rem;
+    }
+  
+    .deletetButton i{
+      color: #ff4848;
+      font-size: 1.1rem;
+    }
+  
+    .deletetButton:hover i{
+      color: #383838;
+      font-size: 1.1rem;
+    }
+  
+  
+    .deletetButton:hover{
+      background-color: #ff4848;
+    }
+  
+    .deletetButton:active{
+      background-color: #cf4f4f;
+    }
+  
+  
+    .cancelButton:hover i{
+      color: #383838;
+      font-size: 1.2rem;
+    }
+  
+  
+    .saveButton i{
+      color: #58ff3b;
+      font-size: 1.2rem;
+    }
+  
+    .saveButtonOff i{
+      color: #cbfdc2;
+      font-size: 1.2rem;
+    }
+  
+    .deletetButtonOff i{
+      color: #fca1a1;
+      font-size: 1.2rem;
+    }
+  
+    .saveButton:hover i{
+      color: #383838;
+    }
+  
+
+    .passwordButton{
+      border-radius: 4px;
+      margin-left: 2px;
+      padding: 2px 8px;
+      outline: none;
+      border: none;
+      font-weight: 600;
+      border: 2px solid #383838;
+    }
+
+    .passwordButton i {
+      color: black;
+    }
+  
+  
+    .passwordButton:hover{
+      background-color:  #383838;
+      color: #ffffff;
+    }
+
+    .passwordButton:hover i {
+      color: #ffffff;
+    }
+  
+    .passwordButton:active{
+      background-color:  #525252;
+      color: #ffffff;
+    }
+  
