--- a/src/Views/ProductDetails/ProductDetails.module.css
+++ b/src/Views/ProductDetails/ProductDetails.module.css
@@ -88,3 +88,31 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+  .commentContainer {
+    position: relative;
+    border-bottom: 1px solid #ccc; /* Borde inferior */
+    padding: 10px; /* Ajusta el espacio interno según sea necesario */
+  }
+  .editButton {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    position: absolute;
+    left: 70%;
+    top:5%; 
+    padding: 0 !important;
+    width: 30px;   
+  }
+  .editButton i{
+    font-size: 20px;
+  }
+  .containerReviews h3 {    
+    color: #ff6600; /* Color naranja bonito */
+    background-color: #fff; /* Fondo blanco */
+    padding: 10px; /* Espaciado interno para resaltar el texto */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */  
+  }
+  
