--- a/src/Views/ProductDetails/ProductDetails.module.css
+++ b/src/Views/ProductDetails/ProductDetails.module.css
@@ -76,6 +76,7 @@
   }
 
   .containerReviews{
+    margin-top: 1rem !important;
     position: relative;
   }
 
@@ -126,6 +127,28 @@
     padding: 10px; /* Espaciado interno para resaltar el texto */
     border-radius: 8px; /* Bordes redondeados */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave */  
+  }
+
+
+  button.deleteButton{
+    font-size: 0.85rem !important;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 !important;
+    padding: 1px 4px !important;
+    background-color: #383838 !important;
+    gap:3px;
+    border-radius: 4px;
+    border: 1px solid rgb(77, 77, 77) !important;;
+  }
+
+  .deleteButton i{
+    font-size: 15px;
+    padding: 0 !important;
+    margin: 0 !important;
+    color: rgb(255, 255, 255) !important;
   }
   
 
