--- a/src/components/FormRating/FormRating.module.css
+++ b/src/components/FormRating/FormRating.module.css
@@ -1,5 +1,17 @@
+.containerContainer{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .container{
-    background-color: rgba(112, 106, 102, 0.42);
+    background-color: rgba(112, 106, 102, 0.712);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,12 +19,7 @@
     width: 600px !important;
     height: 300px !important;
     border-radius: 20px;
-    position: absolute;
-    top: 0;
-    left: 35%; 
-    filter: drop-shadow(1px 2px 13px black);
-    box-shadow: 17px 5px rgba(1, 2, 0, 0.7);
-    backdrop-filter: blur(7px);      
+    box-shadow: 8px 5px rgba(1, 2, 0, 0.7);     
 }
 .buttonSubmit{   
     /* position: absolute;
