--- a/src/components/FormRating/FormRating.module.css
+++ b/src/components/FormRating/FormRating.module.css
@@ -1,48 +1,77 @@
 .containerContainer{    
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 600px !important;
-    height: 300px !important;
-    border-radius: 20px;
     position: absolute;
-    top: 0;
-    left: 35%;     
+    width: 100% !important;
+    height: 100% !important;
 }
 .container{
-    background-color: rgba(112, 106, 102, 0.712);
+    background-color: rgba(110, 110, 110, 0.842);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 600px !important;
     height: 300px !important;
-    border-radius: 20px;
-    box-shadow: 8px 5px rgba(1, 2, 0, 0.7);     
+    border-radius: 8px;
+    box-shadow: 4px 5px rgba(2, 1, 0, 0.7);   
+    color: white;  
 }
-.buttonSubmit{     
-    margin-top: 3%;  
+button.buttonSubmit{     
+
     padding: 0% !important; 
-    width: 40px;    
+ padding: 2px 15px !important;
+ display: flex;
+ align-items: center;
+font-weight: 600 !important;
+width: 90px;
+margin-top: 10px;
 }
-.buttonSubmit i, .buttonCancel i{
-    font-size: 20px;
+
+.buttonSubmit i{
+    font-size: 15px;
+    margin-left: 10px;
+}
+
+
+ .buttonCancel i{
+    font-size: 17px;
 }
 .buttonCancel{
     position: absolute;
     top: 0;
-    left:92%;
-    margin-top: 2%;  
+    left:93.5%;
+    margin-top: 10px;  
     padding: 0% !important; 
-    width: 30px;      
+    width: 30px;    
+    height: 30px;   
 }
 .formRate{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100% !important;
+    padding: 0 2rem;
 }
 
+.infoContaioner{
+    width: 100% !important;
+    border-radius: 8px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.contentForm{
+    width: 100% !important;
+    height: 130px !important;
+
+}
+
+.contentForm textarea{
+    height: 100% !important;
+}
 /* efectos de animacion */
 .fadeIn {
     animation: fadeIn 0.7s ease-in-out forwards;
