--- a/src/Views/Profile/Profile.module.css
+++ b/src/Views/Profile/Profile.module.css
@@ -1,10 +1,42 @@
 .formContainer{
-    background-color: black;
-    color:white;
-    height: 100%;
-
+    background-color: #f2f2f2;
+    margin: 2rem;
+    color:rgb(0, 0, 0);
     padding: 2rem;
+    border-radius: 8px;
+    width: 80%;
+    border: 1px solid rgb(170, 170, 170);
+    min-height: 250px;
 }
+
+.data {
+  background-color: white;
+  padding: 1rem;
+  text-align: left !important;
+  border-radius: 8px;
+  border: 1px solid rgba(170, 170, 170, 0.733);
+ }
+
+ .data p{
+
+font-weight: 700;
+  color: rgb(31, 31, 31) !important;
+ 
+ }
+
+ .data p span{
+
+  font-weight: 400;
+    color: rgb(31, 31, 31) !important;
+   margin-left: 7px;
+   }
+
+  button.buttonBorder{
+    outline: none !important;
+    border:none !important;
+   }
+  
+
 .messajeContainer h3{
 
     color: #ff6824;
