--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,6 +6,10 @@
     color: #ffffff;
   }
 
+  .SearchBar{
+    margin-left: -1rem !important;
+  }
+
 .map{
     width: 100%;
     border-radius: 5px;
